Fixed menu item overlapping issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,9 @@ body
 
 #mainmenu ul li
 {
-	display: inline;
+	display: inline-block;
+	margin-bottom: 10px;
+	margin-right: 5px;
 }
 
 #mainmenu ul li a
